# sdf

./: Cargo.toml  README.md  index-single-thread.html  index.html  vercel.json
.cargo/: config.toml
.github/workflows/: pages.yml
scripts/: build-web-single-thread.sh  build-web.sh  serve-web.py
src/: app.rs  color_ext.rs  fbm.rs  fps_counter.rs  lib.rs  main.rs  math.rs  vec2.rs  vec3.rs  viewer.rs  wasm_boot.rs
src/geometry/: circle.rs  mod.rs  vec2.rs  vec3.rs
src/procedural/: fbm.rs  mod.rs  noise_simplex.rs  smooth_union.rs
src/scenes/: circle.rs  domain_warping.md  domain_warping.rs  mod.rs  scene_1.rs  scene_2.rs  scene_3.rs  simplex_noise.md  simplex_noise.rs  simplex_noise_3d.md  simplex_noise_3d.rs  smooth_union.md  smooth_union.rs
