[package]
name = "sdf"
version = "0.1.0"
edition = "2024"

[features]
default = ["wasm_threads"]
wasm_threads = ["dep:wasm-bindgen-rayon"]

[dependencies]
font8x8 = "0.3.1"
pixels = "0.16.0"
web-time = "1.1.0"
winit = "0.30.13"
rayon = "1.11.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui = "0.33.0"
egui-wgpu = "0.33.0"
egui-winit = "0.33.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.67"
wasm-bindgen-rayon = { version = "1.3.0", features = ["no-bundler"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23.2"

[profile.dev]
opt-level = 1
debug = 1
incremental = true
codegen-units = 256
